Fixed crescentic blockquotes in Celestial dark mode

--- a/obsidian.css
+++ b/obsidian.css
@@ -1593,6 +1593,7 @@ body, .theme-default {
   }
 .theme-celestial.theme-dark blockquote {
     border-radius: 50px;
+    padding: 1em 1.5em 1em 1.5em;
 }
 .theme-celestial.theme-dark .markdown-rendered hr, .theme-celestial.theme-dark .markdown-source-view hr {
     border-color: var(--text-faint);
